<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--So the first Linear Layout is horizontal because I wanted to initially split the screen into left and right parts
    hence the weightSum = 2. Then the next Linear Layout is for the text views to be spaced evenly along a VERTICAL
    manner, hence the vertical orientation. This layout weight here is in correspondence to the weightsum defined before.
    You might be wondering why the next few textviews have weights but doesn't coresspond to it. Well, because their
    WIDTH is exclusively defined, meaning this weightsum on the HORIZONTAL Linear Layout doesn't affect their widths.
    Weights are bound to those that have 0dp (in this case). But they play their own weight game on the vertical scale.-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/name" />  <!--wouldnt it better to wrap content???-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.083"
                android:text="@string/hours" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.083"
                android:text="@string/location" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.083"
                android:text="@string/type" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.083"
                android:text="@string/budget" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.083"
                android:text="@string/rating" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.083"
                android:text="@string/seats" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.083"
                android:text="@string/contact" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.083"
                android:text="@string/extra" />


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1.25"
            android:layout_height="match_parent"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.25">

                <ImageView
                    android:id="@+id/menuImage"
                    android:src="@drawable/he_jiaying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/expandedMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />
</RelativeLayout>