<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <!--Change the strings to the strings xml, somehow code it to make it do it auto assign id and text(and more?)
    from whatever the user inputs -->

    <TextView
        android:id="@+id/addmenu"
        android:paddingTop="8dp"
        android:text="@string/addmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addbutton"
        android:layout_toRightOf="@id/addmenu"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/addbutton" />

    <TextView
        android:paddingTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalmenus"
        android:layout_alignParentRight="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/alexey"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:text="Alexey" />

        <TextView
            android:id="@+id/he"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:text="He" />
    </LinearLayout>
</RelativeLayout>
